# path_tracer

./: .gitignore  CMakeLists.txt  camera.cc  camera.hh  colors.cc  colors.hh  image.cc  image.hh  main.cpp  scene.cc  scene.hh  texture_material.hh  uniform_texture.cc  uniform_texture.hh  vector_3.cc  vector_3.hh
lights/: light.hh  plane_light.cc  plane_light.hh  sphere_light.cc  sphere_light.hh
objects/: object.hh  plane.cc  plane.hh  sphere.cc  sphere.hh
textures/: glass_texture.cc  glass_texture.hh  material.hh  mirror_texture.cc  mirror_texture.hh  texture_material.hh  uniform_texture.cc  uniform_texture.hh
